--- a/about-us.html
+++ b/about-us.html
@@ -445,16 +445,16 @@ Balancing her professional and personal life with ease, Harleen is also a mother
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
   <h6><span class="font-italic font-weight-bold">Product Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV Raw Materials</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Universal Cut Cells MBB Tabber Stringer</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC Components</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Solar PV Reliability Lab</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Lithium Battery Pack Production Lines</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Automatic Laser welding for 3000W & ESS Lithium Battery Packs</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Cell & Pack Testers</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  BESS Container Assembly Line & Component Solutions</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Cooling Systems for C&I and BESS Solutions </a></li>
   
   </ul>
   </div>
