--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Testers
-</a></li>
+
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines 
@@ -240,7 +239,7 @@
 </li>
 
 <!-- Three -->
-<li><a href="#">BMS Testers</a></li>
+
 <li><a href="#">Battery Pack Testers</a></li>
 <li><a href="#">Other Machines</a></li>
 
@@ -618,11 +617,11 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 3 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-3.png" alt="Automatic Laser welding for 3000W & ESS Lithium Battery Packs" title="Automatic Laser welding for 3000W & ESS Lithium Battery Packs">
+<img src="img/product-3.png" alt="Automatic Laser welding for BESS & Battery Packs" title="Automatic Laser welding for BESS & Battery Packs">
 <figcaption>
 <div class="imghvr1-content">     
-<h3 class="wt-title"><a href="#">Automatic Laser welding for 3000W & ESS Lithium Battery Packs</a></h3>
-<p class="mb-3 d-block">Advanced automatic laser welding for lithium ESS and 3000W packs.</p>
+<h3 class="wt-title"><a href="#">Automatic Laser welding for BESS & Battery Packs</a></h3>
+<p class="mb-3 d-block">Advanced automatic laser welding Machines for BESS & lithium-ion Battery packs.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
 </figcaption>
@@ -1171,7 +1170,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
         <img src="img/solar/s11.png" alt="SOVA Solar" title="SOVA Solar" class="w-100">
       </div>
 
-      
+
       
       <div class="major-item">
         <img src="img/solar/s12.png" alt="Nyalkaran Energy LLP" title="Nyalkaran Energy LLP" class="w-100">
