--- a/for-prismatic-batteries.html
+++ b/for-prismatic-batteries.html
@@ -109,22 +109,22 @@
 <ul class="dropdown-menu">
 <li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar PV Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar EPC Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sun Simulator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Turnkey Automation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
+<li class="nav-item mr-0"><a href="#" title="Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
+<li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Sun Simulator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sun Simulator</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability turnkey Lab</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
-<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw materials</a>
+<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
+<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cells</a></li>
+<li class="nav-item mr-0"><a href="#" title="Aluminum Frames" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cells</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar EPC components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
 </ul>
 </li>
 
@@ -132,24 +132,28 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines 
+<li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
 </a></li>
 </ul>
 </li>
@@ -182,28 +186,28 @@
 <li>
 <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
 <ul>
-<li><a href="#">Turnkey Automation</a></li>
-<li><a href="#">Stringer</a></li>
-<li><a href="#">Laminator</a></li>
-<li><a href="#">Sun Simulator</a></li>
+<li><a href="#" title="Turnkey Automation">Turnkey Automation</a></li>
+<li><a href="#" title="Stringer">Stringer</a></li>
+<li><a href="#" title="Laminator">Laminator</a></li>
+<li><a href="#" title="Sun Simulator">Sun Simulator</a></li>
 </ul>
 </li>
 <!-- Two -->
 <li>
-<a href="#">PV Reliability turnkey Lab</a>
+<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
 </li>
 <li>
-<a href="#">Solar Cell Production Line</a>
+<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
 </li>
 <li>
-<a href="raw-materials.html" title="Raw materials">Raw materials</a>
+<a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
 <ul>
-<li><a href="#">Aluminum Frames</a></li>
-<li><a href="#">Solar Cells</a></li>
+<li><a href="#" title="Aluminum Frames">Aluminum Frames</a></li>
+<li><a href="#" title="Solar Cells">Solar Cells</a></li>
 </ul>
 </li>
 <li>
-<a href="#">Solar EPC components </a>
+<a href="#" title="Solar EPC components">Solar EPC components </a>
 </li>
 
 <!-- Three -->
@@ -220,27 +224,27 @@
 <li>
 <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
 <ul>
-<li><a href="#">Turnkey Assembly Line</a></li>
-<li><a href="#">Cell Testers</a></li>
-<li><a href="#">Sorting Machine</a></li>
-<li><a href="#">Welding Machines</a></li>
+<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Cell Testers">Cell Testers</a></li>
+<li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
+<li><a href="#" title="Welding Machines">Welding Machines</a></li>
 </ul>
 </li>
 <!-- Two -->
 <li>
 <a href="for-prismatic-batteries.html" title="For Prismatic Batteries">For Prismatic Batteries</a>
 <ul>
-<li><a href="#">Turnkey Assembly Line</a></li>
-<li><a href="#">Cell Testers</a></li>
-<li><a href="#">Sorting Machine</a></li>
-<li><a href="#">Welding Machines</a></li>
+<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Cell Testers">Cell Testers</a></li>
+<li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
+<li><a href="#" title="Welding Machines">Welding Machines</a></li>
 </ul>
 </li>
 
 <!-- Three -->
 
-<li><a href="#">Battery Pack Testers</a></li>
-<li><a href="#">Other Machines</a></li>
+<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="#" title="Other Machines">Other Machines</a></li>
 
 </ul>
 </li>
@@ -372,14 +376,14 @@
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
 <h6><span class="font-italic font-weight-bold">Quick Links</span></h6>
 
-  <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="index.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
-  <li class="border-bottom"><a href="about-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
-  <li class="border-bottom"><a href="career.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
-  <li class="border-bottom"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
+    <ul class="mt-2 d-block">
+  <li class="border-bottom"><a href="index.html" title="Home"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+  <li class="border-bottom"><a href="about-us.html" title="About Us"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
+  <li class="border-bottom"><a href="career.html" title="Career"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
+  <li class="border-bottom"><a href="#" title="News & Events"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
   <!-- <li class="border-bottom"><a href="sitemap.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Sitemap  </a></li> -->
   <!-- <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Our Presence  </a></li> -->
-  <li class="border-bottom"><a href="contact-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact Us  </a></li>
+  <li class="border-bottom"><a href="contact-us.html" title="Contact Us"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact Us  </a></li>
   </ul>
 </div>
 
@@ -406,16 +410,16 @@
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
   <h6><span class="font-italic font-weight-bold">Product Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Universal Cut Cells MBB Tabber Stringer</a></li>
+  <li class="border-bottom"><a href="#" title="Universal Cut Cells MBB Tabber Stringer" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Universal Cut Cells MBB Tabber Stringer</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Solar PV Reliability Lab</a></li>
+  <li class="border-bottom"><a href="#" title="Turnkey Solar PV Reliability Lab" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Solar PV Reliability Lab</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Automatic Laser welding for 3000W & ESS Lithium Battery Packs</a></li>
+  <li class="border-bottom"><a href="#" title="Automatic Laser welding for 3000W & ESS Lithium Battery Packs" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Automatic Laser welding for 3000W & ESS Lithium Battery Packs</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Cell & Pack Testers</a></li>
+  <li class="border-bottom"><a href="#" title="Battery Cell & Pack Testers" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Cell & Pack Testers</a></li>
 
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  BESS Container Assembly Line & Component Solutions</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Cooling Systems for C&I and BESS Solutions </a></li>
+  <li class="border-bottom"><a href="#" title="BESS Container Assembly Line & Component Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  BESS Container Assembly Line & Component Solutions</a></li>
+  <li class="border-bottom"><a href="#" title="Cooling Systems for C&I and BESS Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Cooling Systems for C&I and BESS Solutions </a></li>
   
   </ul>
   </div>
