--- a/lithium-battery-packs-manufacturing.html
+++ b/lithium-battery-packs-manufacturing.html
@@ -341,14 +341,14 @@
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
 <span class="font-italic font-weight-bold">Quick Links</span>
 
-  <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="index.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
-  <li class="border-bottom"><a href="about-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
-  <li class="border-bottom"><a href="career.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
-  <li class="border-bottom"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
+    <ul class="mt-2 d-block">
+  <li class="border-bottom"><a href="index.html" title="Home"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+  <li class="border-bottom"><a href="about-us.html" title="About Us"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
+  <li class="border-bottom"><a href="career.html" title="Career"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
+  <li class="border-bottom"><a href="#" title="News & Events"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
   <!-- <li class="border-bottom"><a href="sitemap.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Sitemap  </a></li> -->
   <!-- <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Our Presence  </a></li> -->
-  <li class="border-bottom"><a href="contact-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact Us  </a></li>
+  <li class="border-bottom"><a href="contact-us.html" title="Contact Us"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact Us  </a></li>
   </ul>
 </div>
 
