--- a/solar-panel-production-turnkey-line.html
+++ b/solar-panel-production-turnkey-line.html
@@ -131,17 +131,13 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
-<ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
@@ -211,8 +207,7 @@
 
 <!-- Three -->
 
-<li>
-</li>
+
 </ul>
 </li>
 
