--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@ Your browser does not support the video tag.
 <span><a href="#" class="count-in">Let the sun do the work</a></span>
 <div class="btn-box">
 <ul>
-<li class="list-inline-item mb-3"><a href="#"> Solar Cell Production Lines</a></li>
-<li class="list-inline-item mb-3"><a href="#"> Solar Panel Production Lines</a></li>
+<li class="list-inline-item mb-3"><a href="#" title="Solar Cell Production Lines"> Solar Cell Production Lines</a></li>
+<li class="list-inline-item mb-3"><a href="#" title="Solar Panel Production Lines"> Solar Panel Production Lines</a></li>
 <li class="list-inline-item mb-3"><a href="#" title="Solar PV Raw Materials"> Solar PV Raw Materials</a></li>
 <li class="list-inline-item mb-3"><a href="#" title="Solar EPC Components"> Solar EPC Components</a></li>
 </ul>
@@ -545,9 +545,9 @@ style="background: url(img/unit-2.jpg)no-repeat; background-size: cover;">
 <span>Future is Electric</span>
 <div class="btn-box">
   <ul>
-  <li class="list-inline-item mb-3"><a href="#"> Lithium Cell Production Lines</a></li>
+  <li class="list-inline-item mb-3"><a href="#" title="Lithium Cell Production Lines"> Lithium Cell Production Lines</a></li>
   <li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Pack Production Lines"> Lithium Battery Pack Production Lines</a></li>
-  <li class="list-inline-item mb-3"><a href="#"> Lithium Battery Separator Production Lines</a></li>
+  <li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Separator Production Lines"> Lithium Battery Separator Production Lines</a></li>
   <li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Raw Material Components"> Lithium Battery Raw Material Components</a></li>
   </ul>
   </div>
