--- a/dum.html
+++ b/dum.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body></body>
+<body>
+</body>
 <script src="https://raw.githack.com/strangerintheq/rgba/0.0.8/rgba.js"></script>
 <script>
     RGBA(`
