--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@ style="background: url(img/unit-1.jpg)no-repeat; background-size: cover;">
 <span>Let the sun do the work</span>
 <div class="btn-box">
   <ul>
-  <li class="list-inline-item mb-3"><a href="#"> Solar Cell Production Lines</a></li>
-  <li class="list-inline-item mb-3"><a href="#"> Solar Panel Production Lines</a></li>
+  <li class="list-inline-item mb-3"><a href="#" title="Solar Cell Production Lines"> Solar Cell Production Lines</a></li>
+  <li class="list-inline-item mb-3"><a href="#" title="Solar Panel Production Lines"> Solar Panel Production Lines</a></li>
   <li class="list-inline-item mb-3"><a href="#" title="Solar PV Raw Materials"> Solar PV Raw Materials</a></li>
   <li class="list-inline-item mb-3"><a href="#" title="Solar EPC Components"> Solar EPC Components</a></li>
   </ul>
