--- a/about-us.html
+++ b/about-us.html
@@ -255,7 +255,7 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row">
+<section class="ttm-page-title-row" style="background: url(img/abt-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
