--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
@@ -215,7 +215,7 @@
 
 
 
-<li><a href="lithium-batteries.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
+<li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
 <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
@@ -2473,7 +2473,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 
 
-  <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
+<h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
 <img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
