--- a/lb.html
+++ b/lb.html
@@ -39,8 +39,8 @@
 
 <div class="col-md-4 text-left">
 <ul>
+<li class="list-inline-item border-0"><a href="#"><i class="fa fa-linkedin text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0"><a href="#"><i class="fa fa-twitter text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png"></a></li>
